--- a/css/main.css
+++ b/css/main.css
@@ -396,3 +396,82 @@ footer address {
     font-style: normal;
     line-height: 1.4;
 }
+
+#main-nav label img {
+    width: 20px;
+    height: 20px;
+    margin-top: 15px;
+    cursor: pointer;
+    transition: all .5s ease;
+    margin-bottom: 20px; 
+ } 
+ 
+ #main-nav input, #burger-con {
+    display: none;
+ }
+ 
+ 
+ /*   ~ sibling selector   */
+ 
+ 
+ #main-nav input:checked ~ #burger-con {
+    display: block;
+ }
+ 
+ #main-nav input:checked ~ label img {
+    transform: rotate(90deg);
+ }
+ 
+ #main-nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+ }
+ 
+ #main-nav ul li a {
+    display: block;
+    padding: 10px 0 10px 0;
+    text-align: center;
+    color: #626262;
+ }
+ 
+ #main-nav ul li {
+    border-bottom: 1px solid #efefef;
+ }
+ 
+ 
+ 
+ #main-nav ul li:first-child {
+    border-top: 1px solid #efefef;
+ }
+ 
+ #main-nav ul li:last-child {
+    margin-bottom: 10px;
+ } 
+ 
+ 
+ 
+ #logo {
+    margin-bottom: 20px;
+    max-width: 382px;
+ }
+ 
+ .bold-text {
+   font-weight: bold;
+ }
+
+ input[type="checkbox"] {
+    background-color: #fff;
+    border-radius: 8px;
+ }
+ 
+  input[type="checkbox"]:checked + span {
+    color: #9a2018;
+  }
+ 
+ 
+  input[type="checkbox"]:checked + span::after {
+    content: "\1F4A1";
+    font-size: 20px;
+    margin-left: 15px;
+  }
